--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "alwaysonlinetxm",
   "license": "ISC",
   "dependencies": {
-    "inferno": "^1.2.2",
-    "inferno-component": "^1.2.2",
-    "inferno-redux": "^1.2.2",
+    "inferno": "^1.4.0",
+    "inferno-compat": "^1.4.0",
+    "inferno-component": "^1.4.0",
+    "inferno-redux": "^1.4.0",
+    "inferno-router": "^1.4.0",
     "isomorphic-fetch": "^2.2.1",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
@@ -51,7 +53,6 @@
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
-    "inferno-compat": "^1.2.2",
     "keymirror": "^0.1.1",
     "node-sass": "^4.5.0",
     "optimize-js-plugin": "0.0.4",
