--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     "latest",
-    "stage-0"
+    "stage-0",
+    "flow"
   ],
   "plugins": [
     ["inferno", {"imports": true}],
