--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-inferno": "^1.9.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.22.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "flow-bin": "^0.43.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "keymirror": "^0.1.1",
